--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,6 +35,8 @@ dependencies:
   riverpod_lint: ^2.6.5
   dio: ^5.8.0
   go_router: ^16.2.0
+  table_calendar: ^3.2.0
+  intl: ^0.20.2
 
 
   # The following adds the Cupertino Icons font to your application.
